welcome.lessons.welcome.array.basics.Array2.scala.code

override def run() {
var T= new Array[Color](getMondeHauteur())


for (i<-0 to (getMondeHauteur()-2)){
	
	T(i)=getCouleurSol()
	
	
	avance();
}
recule(5);
gauche();
avance();
droite();
val decalage = litMessage().toInt
for (k<-1 to (getMondeLargeur()-1)){
for (j<-0 to (getMondeHauteur()-1)){
	
    T((i + decalage) % getMondeHauteur())
	setCouleurBrosse(T(j));
	baisseBrosse();
     leveBrosse();
     avance();
}


}
}







     
